TP3-kubernetes-yaml/app/default/fusiion-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
  namespace: fusiion
  labels:
    app: fusiion
    name: nginx-ingress-service
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: fusiion
    name: nginx-ingress
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: nginx-ingress
  namespace: fusiion
  labels:
    app: fusiion
    name: nginx-ingress
    kubernetes.io/cluster-service: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fusiion
      name: nginx-ingress
  template:
    metadata:
      labels:
        app: fusiion
        name: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      containers:
      - image: fusiion/nginx-ingress-controller:latest
        name: nginx-ingress
        args:
            - /nginx-ingress-controller
            - --default-backend-service=$(POD_NAMESPACE)/fusiion-front-service
            - --configmap=$(POD_NAMESPACE)/nginx-configuration
            - --annotations-prefix=nginx.ingress.kubernetes.io
        ports:
        - containerPort: 80
