TP3-kubernetes-yaml/app/default/fusiion-ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: fusiion
  name: fusiion-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.org/websocket-services: "fusiion-notification-service"
spec:
  rules:
   - http:
      paths:
      - path: /gestionCollaborateurs
        backend:
          serviceName: fusiion-gestion-collaborateurs-service
          servicePort: 8080
          
      - path: /gestionCompetences
        backend:
          serviceName: fusiion-gestion-competences-service
          servicePort: 8080
          
      - path: /swagger-service
        backend:
          serviceName: fusiion-swagger-service
          servicePort: 8080
          
      - path: /gestionAuthentification
        backend:
          serviceName: fusiion-authentification-service
          servicePort: 8080
          
      - path: /gestionGaming
        backend:
          serviceName: fusiion-gaming-service
          servicePort: 8080
          
      - path: /gestionStatistiques
        backend:
          serviceName: fusiion-statistiques-service
          servicePort: 8080
          
      - path: /gestionClients
        backend:
          serviceName: fusiion-gestion-clients-service
          servicePort: 8080
          
      - path: /gestionNotification
        backend:
          serviceName: fusiion-notification-service
          servicePort: 8080
